Micronaut Security includes the following new features and improvements.

== What's New in Micronaut Security 3

- Improvements to many APIs
- Consolidated authentication state into a single interface
- The api:security.rules.SecurityRule[] API is now reactive
- A `getRoles` method was added to api:security.authentication.Authentication[]