@@ -25,7 +25,6 @@ import io.micronaut.scheduling.TaskExecutors;
 import io.micronaut.security.authentication.AuthenticationProvider;
 import io.micronaut.security.authentication.AuthenticationResponse;
 import io.micronaut.security.authentication.AuthenticationRequest;
-import io.micronaut.security.authentication.AuthenticationFailed;
 import io.micronaut.security.authentication.AuthenticationException;
 import io.micronaut.security.authentication.AuthenticationFailureReason;
 import reactor.core.publisher.FluxSink;
@@ -40,7 +39,6 @@ import javax.naming.NamingException;
 import javax.naming.directory.DirContext;
 import java.io.Closeable;
 import java.util.Collections;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
